# This repo builds firmware via the C/C++ Makefile - it is NOT a packaged Python project,
# so there is deliberately no [project] table or build backend here. The file exists only to
# declare the dev-only dependency group (PEP 735) for the host-side Python tooling: the test
# suites (`make test-scripts`) and the DSP code generators (`make faust-gen` / `gen-engines`).
# Installed into the repo-local .venv with `.venv/bin/pip install --group dev`. None of it is
# needed to build or run the firmware.
[dependency-groups]
dev = [
    "cyfaust>=0.1.4",
    "gen-dsp>=0.2.0",
    "pytest",
]
